--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 tr,td{
     border:1px;
     border-style: solid;
-    border: solid 1px red;
+    border: solid 1px black;
 }
 td{
     height: 50px;
